--- a/style.scss
+++ b/style.scss
@@ -1,11 +1,15 @@
 :root,
-:root.light {
+.light {
   --background-color: #eee;
   --text-color: #333;
 }
 .dark {
   --background-color: #333;
   --text-color: #eee;
+}
+.blue {
+  --background-color: #5072a7;
+  --text-color: #b9d9eb;
 }
 
 $background-color: var(--background-color);
