--- a/style.scss
+++ b/style.scss
@@ -11,6 +11,10 @@
   --background-color: #5072a7;
   --text-color: #b9d9eb;
 }
+.green {
+  --background-color: #4b5320;
+  --text-color: #dadd98;
+}
 
 $background-color: var(--background-color);
 $text-color: var(--text-color);
